MDEV-29977  Memory leak in row_log_table_apply_update

- InnoDB fails to free the persistent cursor for the clustered index
when InnoDB replays the update operation on the table that is
being rebuild.